# DS-UNAL-2024-2

./: .gitignore  README.md  pyproject.toml
src/Module_1_Foundations/Practice_1_Inventory_System/: Address.py  Administrator.py  Agenda.py  Changelog.py  ChangelogEntry.py  Credentials.py  CredentialsList.py  Date.py  DateTime.py  DoubleList.py  DoubleNode.py  Equipment.py  EquipmentList.py  FileBackedList.py  Inventory.py  InventoryItem.py  List.py  Protocols.py  Request.py  RequestList.py  Researcher.py  Role.py  Session.py  Time.py  User.py  UserList.py  administrador_main.py  auth.py  config.py  integrity_check.py  main.py  researcher_main.py  test.py  utils.py
src/Module_3_Graphs/Practice_2_Graph_Application/: Graph.py  Program_1.py  Program_2.py
uml-class-diagram/: main.d2
uml-class-diagram/classes/: main.d2
uml-class-diagram/classes/generics/: double-list[t].d2  double-node[t].d2  file-backed-list[t].d2  main.d2
uml-class-diagram/classes/specializations/: double-list[t].d2  double-node[t].d2  file-backed-list[t].d2
uml-class-diagram/classes/standalone/: address.d2  administrator.d2  changelog-entry.d2  credentials.d2  date-time.d2  date.d2  equipment.d2  inventory-item.d2  main.d2  request.d2  researcher.d2  role.d2  session.current.d2  session.d2  session.shared.d2  time.d2  user.d2
uml-class-diagram/interfaces/: csv-serializable.d2
uml-class-diagram/relationships/: main.d2
uml-class-diagram/relationships/aggregation/: csv_serializable.d2  main.d2
uml-class-diagram/relationships/composition/: main.d2  session.d2
(+82 files in other folders)
